Fix Java 11 compile-time deprecation warnings.